# jira-releaser

./: Cargo.toml  dev.sh  osx_build.sh  readme.md  test.sh
src/: complex_pattern.rs  http_client.rs  jira_client.rs  main.rs  parameters.rs  token_parser.rs
src/jira/: client.rs  error.rs  future.rs  mod.rs  model.rs
test/: api.rs
test-fixtures/: issue1_response.json
test/fixtures/: issue1_response.json  versions_response.json
tests/: api.rs
tests/fixtures/: create_version.json
