[package]
name = "jira_releaser"
version = "0.1.0"
authors = ["aghost-7"]

[dependencies]
futures = '0.1'
hyper = '0.11'
hyper-tls = '0.1.2'
tokio-core = '0.1'
clap = '2.5.1'
serde_json = '1.0'

#hyper = '0.9.6'
#regex = '0.1.71'
#rustc-serialize = '0.3'
clippy = {version = "*",optional = true}
log = '0.3'
env_logger = '0.3'

[dev-dependencies]
mockito = '0.2.2'
iron = '0.3.0'
router = '0.1.1'
